# MLOps-1

./: .dockerignore  .gitignore  =0.21.2  DVC.sh  Dockerfile  README.md  Readme  classifier_features.csv  classifier_labels.csv  dashboard.py  docker-compose.yml  download.ipynb  generate-proto.sh  load.ipynb  pyproject.toml  requirements copy.txt  requirements.txt  run-grpc.sh  run-rest.sh  users.json
.dvc/: config  config.local
.dvc/tmp/: lock
bash_scripts/: add_remote.sh  dvc_init.sh  track_datasets.sh
grpc-server/: authenticator.proto  authenticator_pb2.py  authenticator_pb2.pyi  authenticator_pb2_grpc.py  client.py  errors_pb2_grpc.py  healthcheck_pb2.py  healthcheck_pb2_grpc.py  main.py  model_trainer.proto  model_trainer_pb2.py  model_trainer_pb2.pyi  model_trainer_pb2_grpc.py
grpc-server/proto/: errors.proto  errors_pb2.py  errors_pb2.pyi  healthcheck.proto  healthcheck_pb2.pyi  model_trainer_pb2.pyi
models/: GradientBoostingClassifier.pkl  GradientBoostingRegressor.pkl
modules/services/: auth_service.py  data_version_tracker_service.py  dvc_service.py  minio_service.py  model_trainer_service.py
modules/utils/: dict_to_file.py  logger.py  path_manager.py
rest-server/: datasets.dvc  main.py  users.json
rest-server/.dvc/: config
rest-server/datasets/: .gitignore  features.csv  features.csv.dvc  labels.csv  labels.csv.dvc
rest-server/tmp/dvc_temp/: features.dvc
